Fix annotation formatting Decrease whitespace around annotation descriptions, collapse if it does not exist. Make author and date line gray

--- a/viewer/viewer.css
+++ b/viewer/viewer.css
@@ -44,12 +44,13 @@ html, body {
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
 
-.annotation-card {
-    margin-bottom: 20px;
-}
-
 .annotation-anatomy-text {
     color: #444;
+}
+
+.annotation-description {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .annotation-control-button {
@@ -85,7 +86,7 @@ a.cardlink.delete {
 }
 
 .comments {
-    margin: -10px;
+    margin: 10px -10px -10px -10px;
     padding: 0 10px 0 10px;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
